<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Boulevard of Broken dreams</string>
    <string name="action_settings">Settings</string>
    <string name="facebook">facebook</string>
    <string name="lyrics">lyrics</string>
    <string name="hello_world">I walk a lonely road\n
The only one that I have ever known\n
Dont know where it goes\n
But its home to me and I walk alone\n
\n
I walk this empty street\n
On the Boulevard of Broken Dreams\n
Where the city sleeps\n
And I m the only one and I walk alone\n
\n
I walk alone\n
I walk alone\n
I walk alone\n
I walk a&#8230;\n
\n
My shadow s the only one that walks beside me\n
My shallow heart s the only thing thats beating\n
Sometimes I wish someone out there will find me\n
Til then I walk alone\n
\n
Ah-ah, ah-ah, ah-ah, aaah-ah,\n
Ah-ah, ah-ah, ah-ah\n
\n
I m walking down the line\n
That divides me somewhere in my mind\n
On the border line\n
Of the edge and where I walk alone\n
\n
Read between the lines\n
Whats fucked up and everything s alright\n
Check my vital signs\n
To know I m still alive and I walk alone\n
\n
I walk alone\n
I walk alone\n
I walk alone\n
I walk a&#8230;\n
\n
My shadows the only one that walks beside me\n
My shallow hearts the only thing thats beating\n
Sometimes I wish someone out there will find me\n
Til then I walk alone\n
\n
Ah-ah, ah-ah, ah-ah, aaah-ah\n
Ah-ah, ah-ah\n
\n
I walk alone\n
I walk a&#8230;\n
\n
I walk this empty street\n
On the Boulevard of Broken Dreams\n
Where the city sleeps\n
And I m the only one and I walk a&#8230;\n
\n
My shadows the only one that walks beside me\n
My shallow hearts the only thing thats beating\n
Sometimes I wish someone out there will find me\n
Til then I walk alone&#8230;\n</string>
    <string name="coverartdescription">favsong (coverart)</string>
    <string name="play">Play</string>
    <string name="pause">pause</string>
    <string name="stop">stop</string>

</resources>
