<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/coverart"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/coverartdescription"
        android:src="@drawable/coverart" />

    <Button
        android:id="@+id/button1"
       android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="openFB"
        android:text="@string/facebook"
        android:textColor="@android:color/background_light"
       android:background="#6D8BC9"
       android:paddingLeft="12sp"
       android:paddingRight="12sp"
       
        />
    

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentRight="true"
        android:onClick="openBC"
        android:text="@string/lyrics" 
        android:textColor="@android:color/background_light"
       android:background="@android:color/black"
       android:paddingLeft="12sp"
       android:paddingRight="12sp"/>

    <ScrollView
        android:id="@+id/scrolly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/coverart"
        android:layout_above="@id/button1"
               >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/hello_world"
            android:textSize="16sp" />

    </ScrollView>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/coverart"
        android:layout_marginRight="23dp"
        android:layout_marginTop="25dp"
        android:layout_toLeftOf="@+id/button2"
        android:text="@string/play" 
        android:onClick="play"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignParentRight="true"
        android:text="@string/pause" 
        android:onClick="pause"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_below="@+id/button3"
        android:layout_marginTop="16dp"
        android:text="@string/stop" 
        android:onClick="stop" />
    
</RelativeLayout>